B6: add 2-week curriculum, sidebar chapter links, header style update

--- a/guide/bonus-06/index.html
+++ b/guide/bonus-06/index.html
@@ -127,11 +127,23 @@ pre{font-size:11px;padding:14px}table{font-size:10px;display:block;overflow-x:au
 <li><a href="../round-10/">R10. Final Project</a></li>
 </ul>
 </div>
+<div class="nav-section">
+<div class="nav-section-title">This Lecture</div>
+<ul class="nav-list">
+<li><a href="#ch1">1. 최적화란 무엇인가?</a></li>
+<li><a href="#ch2">2. 미분과 최적화</a></li>
+<li><a href="#ch3">3. 볼록 집합과 볼록 함수</a></li>
+<li><a href="#ch4">4. 라그랑주 승수법</a></li>
+<li><a href="#ch5">5. KKT 조건</a></li>
+<li><a href="#ch6">6. QP와 포트폴리오 최적화</a></li>
+<li><a href="#ch7">7. 경사하강법과 변형</a></li>
+<li><a href="#ch8">8. 정규화와 확률적 최적화</a></li>
+<li><a href="#ch9">9. 금융 최적화 응용</a></li>
+<li><a href="#ch10">10. 종합 문제</a></li>
+</ul>
 </div>
-<div class="sidebar-footer">
-<div class="progress-bar"><div class="progress-fill" style="width:87%"></div></div>
-<div class="progress-label">87 % Complete</div>
 </div>
+<div class="sidebar-footer">Bonus 6 — 최적화 이론 올인원</div>
 </div>
 
 <div class="main-wrapper">
@@ -139,21 +151,72 @@ pre{font-size:11px;padding:14px}table{font-size:10px;display:block;overflow-x:au
 <div class="paper-content">
 
 <div class="paper-header">
-<div class="paper-category">BONUS ROUND 6 — 최적화 이론 올인원</div>
-<div class="paper-title">Optimization Theory All-in-One:<br>볼록 최적화에서 포트폴리오 최적화까지</div>
-<div class="paper-subtitle">From Gradient Descent to Convex Portfolio Optimization for HFT</div>
-<div class="paper-team">HFT ML Master Plan · Bonus Series</div>
+<div class="paper-category">Bonus Round 6 / 6 — R7과 R8 사이</div>
+<h1 class="paper-title">최적화 이론 올인원 (Optimization Theory All-in-One)</h1>
+<div class="paper-subtitle">볼록 최적화 → 라그랑주 → KKT → QP → 경사하강법 → 포트폴리오 최적화</div>
+<div class="paper-team">ML 학습과 HFT 전략의 수학적 엔진을 완전 정복하는 자습서</div>
+<div class="progress-bar"><div class="progress-fill"></div></div>
+<div class="progress-label">Bonus Round — 최적화 이론 완전 정복</div>
 </div>
 
 <div class="abstract">
-<div class="abstract-title">Abstract</div>
-<p class="ni">본 교재는 최적화 이론(Optimization Theory)의 핵심을 10개 챕터로 압축한 올인원 강의이다. 
-기초적인 미분 기반 최적화에서 출발하여, 볼록 최적화(Convex Optimization), 라그랑주 승수법, 
-KKT 조건, 이차계획법(QP), 경사하강법과 그 변형들, 확률적 최적화, 그리고 금융에서의 
-포트폴리오 최적화까지 체계적으로 다룬다. 모든 이론은 Python 코드와 Plotly 시각화를 통해 
-직관적으로 확인할 수 있으며, 각 챕터 말미에 연습문제를 포함한다. 
-R8(Convex Optimization + Transformer)의 선수 지식으로서, ML/DL 학습과 HFT 전략 최적화에 
-필수적인 수학적 기반을 제공한다.</p>
+<div class="abstract-title">왜 최적화 이론인가?</div>
+<p class="ni">머신러닝은 곧 최적화다. 선형회귀의 OLS, 로지스틱 회귀의 MLE, 신경망의 역전파 — 모두 "손실함수를 최소화하는 파라미터를 찾는" 최적화 문제이다. HFT에서는 밀리초 단위로 포트폴리오 가중치를 조정하고, 주문 실행 비용을 최소화하며, 리스크 한도 내에서 수익을 극대화해야 한다. 이 강의를 마치면:</p>
+<ul>
+<li>볼록 함수와 비볼록 함수의 차이를 설명하고, 왜 볼록성이 중요한지 이해한다</li>
+<li>라그랑주 승수법과 KKT 조건으로 제약 최적화 문제를 풀 수 있다</li>
+<li>Markowitz 평균-분산 최적화를 QP로 정식화하고 Python으로 구현할 수 있다</li>
+<li>GD, SGD, Adam 등 경사하강법 변형의 원리와 수렴 속도를 비교할 수 있다</li>
+<li>L1/L2 정규화의 기하학적 의미와 근위 경사법을 이해한다</li>
+<li>Risk Parity, Black-Litterman, 거래비용 최적화를 구현할 수 있다</li>
+</ul>
+<div style="font-size:13px;color:#555;margin-top:15px;font-style:italic"><strong>Keywords:</strong> Convex Optimization, Gradient Descent, KKT, QP, Lagrange, Adam, SGD, Markowitz, Risk Parity, Black-Litterman, Regularization</div>
+</div>
+
+<!-- ═══════════════════════════════════════════════════════════════ -->
+<!-- 2주 커리큘럼 학습방법론 -->
+<!-- ═══════════════════════════════════════════════════════════════ -->
+<div style="margin:30px 0;padding:28px;background:linear-gradient(135deg,#f3e5f5,#ede7f6);border-radius:12px;border:1px solid #ce93d8">
+<p class="ni" style="text-align:center;font-weight:bold;margin-bottom:20px;font-size:16px;color:#6a1b9a">📅 2주 완성 커리큘럼 — 학습 방법론</p>
+<p class="ni" style="font-size:13px;color:#4a148c;margin-bottom:18px;text-align:center">매일 2~3시간 투자 기준. 이론 → 코드 → 문제 풀이의 3단계 사이클을 반복한다.</p>
+
+<div style="display:grid;grid-template-columns:1fr 1fr;gap:16px">
+
+<!-- Week 1 -->
+<div style="background:#fff;padding:18px;border-radius:10px;box-shadow:0 2px 8px rgba(0,0,0,.08);border-left:5px solid #7b1fa2">
+<p class="ni" style="font-weight:bold;color:#7b1fa2;font-size:14px;margin-bottom:12px">🔬 Week 1 — 이론 기초 & 볼록 최적화</p>
+<table style="font-size:11px;margin:0;width:100%">
+<tr><th style="background:#7b1fa2;font-size:10px">Day</th><th style="background:#7b1fa2;font-size:10px">학습 내용</th><th style="background:#7b1fa2;font-size:10px">핵심 활동</th></tr>
+<tr><td>Day 1</td><td>Ch 1. 최적화 기본 개념</td><td>분류 체계 정리, 전역/지역 최적해 시각화</td></tr>
+<tr><td>Day 2</td><td>Ch 2. 미분과 최적화</td><td>그래디언트·헤시안 계산, Rosenbrock 등고선 실습</td></tr>
+<tr><td>Day 3</td><td>Ch 3. 볼록 집합·볼록 함수</td><td>볼록성 판별 연습, 강볼록 조건수 계산</td></tr>
+<tr><td>Day 4</td><td>Ch 4. 라그랑주 승수법</td><td>GMV 포트폴리오 해석적 유도 + NumPy 구현</td></tr>
+<tr><td>Day 5</td><td>Ch 5. KKT 조건</td><td>상보 이완 해석, scipy 제약 최적화 실습</td></tr>
+<tr><td>Day 6</td><td>Ch 1~5 복습</td><td>연습문제 재풀이, 개념 노트 정리</td></tr>
+<tr><td>Day 7</td><td>🧘 휴식 / 가벼운 복습</td><td>핵심 수식 카드 만들기</td></tr>
+</table>
+</div>
+
+<!-- Week 2 -->
+<div style="background:#fff;padding:18px;border-radius:10px;box-shadow:0 2px 8px rgba(0,0,0,.08);border-left:5px solid #e040fb">
+<p class="ni" style="font-weight:bold;color:#e040fb;font-size:14px;margin-bottom:12px">🚀 Week 2 — 알고리즘 & 금융 응용</p>
+<table style="font-size:11px;margin:0;width:100%">
+<tr><th style="background:#e040fb;font-size:10px">Day</th><th style="background:#e040fb;font-size:10px">학습 내용</th><th style="background:#e040fb;font-size:10px">핵심 활동</th></tr>
+<tr><td>Day 8</td><td>Ch 6. QP와 Markowitz</td><td>효율적 프론티어 직접 구현, 솔버 비교</td></tr>
+<tr><td>Day 9</td><td>Ch 7. 경사하강법</td><td>GD/Momentum/Adam 궤적 비교 실험</td></tr>
+<tr><td>Day 10</td><td>Ch 8. 정규화</td><td>L1 vs L2 기하학 시각화, ISTA 구현</td></tr>
+<tr><td>Day 11</td><td>Ch 9. 금융 최적화 응용</td><td>Risk Parity + Black-Litterman 구현</td></tr>
+<tr><td>Day 12</td><td>Ch 10. 종합 문제</td><td>3개 종합 문제 풀이 (시간 측정)</td></tr>
+<tr><td>Day 13</td><td>전체 복습 + 미니 프로젝트</td><td>5자산 포트폴리오 최적화 파이프라인 구축</td></tr>
+<tr><td>Day 14</td><td>🎯 R8 연결 준비</td><td>CVXPY 설치·기초 실습, Cheat Sheet 암기</td></tr>
+</table>
+</div>
+
+</div>
+
+<div style="margin-top:18px;padding:14px;background:rgba(255,255,255,.7);border-radius:8px;border:1px dashed #ab47bc">
+<p class="ni" style="font-size:12px;color:#6a1b9a"><strong>💡 학습 팁:</strong> 최적화는 "손으로 풀기 → 코드로 검증 → 시각화로 직관 잡기"의 순서가 가장 효과적이다. 특히 Ch 4~5의 라그랑주/KKT는 반드시 수식을 직접 전개해 본 뒤 scipy로 답을 확인하라. Ch 7의 경사하강법은 학습률을 바꿔가며 수렴 과정을 눈으로 확인하는 것이 핵심이다. Week 2의 금융 응용은 실제 주가 데이터로 실습하면 체감이 완전히 달라진다.</p>
+</div>
 </div>
 
 <p class="ni"><strong>목차:</strong></p>
@@ -171,7 +234,7 @@ R8(Convex Optimization + Transformer)의 선수 지식으로서, ML/DL 학습과
 </ol>
 
 <!-- ═══════════════════════════════════════════════════════════════ -->
-<h2>Chapter 1. 최적화란 무엇인가?</h2>
+<h2 id="ch1">Chapter 1. 최적화란 무엇인가?</h2>
 
 <h3>1.1 최적화 문제의 표준형</h3>
 
@@ -271,7 +334,7 @@ R8(Convex Optimization + Transformer)의 선수 지식으로서, ML/DL 학습과
 </div></details>
 
 <!-- ═══════════════════════════════════════════════════════════════ -->
-<h2>Chapter 2. 미분과 최적화</h2>
+<h2 id="ch2">Chapter 2. 미분과 최적화</h2>
 
 <h3>2.1 1차 필요조건 (First-Order Necessary Condition)</h3>
 
@@ -391,7 +454,7 @@ pt = (<span class="nu">0.5</span>, <span class="nu">0.5</span>)
 </div></details>
 
 <!-- ═══════════════════════════════════════════════════════════════ -->
-<h2>Chapter 3. 볼록 집합과 볼록 함수</h2>
+<h2 id="ch3">Chapter 3. 볼록 집합과 볼록 함수</h2>
 
 <h3>3.1 볼록 집합 (Convex Set)</h3>
 
@@ -505,7 +568,7 @@ pt = (<span class="nu">0.5</span>, <span class="nu">0.5</span>)
 </div></details>
 
 <!-- ═══════════════════════════════════════════════════════════════ -->
-<h2>Chapter 4. 라그랑주 승수법</h2>
+<h2 id="ch4">Chapter 4. 라그랑주 승수법</h2>
 
 <h3>4.1 등식 제약 최적화</h3>
 
@@ -602,7 +665,7 @@ GMV 가중치: [0.2391 0.0543 0.7065]
 </div></details>
 
 <!-- ═══════════════════════════════════════════════════════════════ -->
-<h2>Chapter 5. KKT 조건</h2>
+<h2 id="ch5">Chapter 5. KKT 조건</h2>
 
 <h3>5.1 부등식 제약과 KKT 조건</h3>
 
@@ -710,7 +773,7 @@ x + y = 2.0</div>
 </div></details>
 
 <!-- ═══════════════════════════════════════════════════════════════ -->
-<h2>Chapter 6. 이차계획법(QP)과 포트폴리오 최적화</h2>
+<h2 id="ch6">Chapter 6. 이차계획법(QP)과 포트폴리오 최적화</h2>
 
 <h3>6.1 이차계획법 표준형</h3>
 
@@ -867,7 +930,7 @@ sol = np.linalg.<span class="fn">solve</span>(M, rhs)
 </div></details>
 
 <!-- ═══════════════════════════════════════════════════════════════ -->
-<h2>Chapter 7. 경사하강법과 변형</h2>
+<h2 id="ch7">Chapter 7. 경사하강법과 변형</h2>
 
 <h3>7.1 경사하강법 (Gradient Descent)</h3>
 
@@ -1000,7 +1063,7 @@ x = <span class="nu">2.0</span>
 </div></details>
 
 <!-- ═══════════════════════════════════════════════════════════════ -->
-<h2>Chapter 8. 확률적 최적화와 정규화</h2>
+<h2 id="ch8">Chapter 8. 확률적 최적화와 정규화</h2>
 
 <h3>8.1 경험적 리스크 최소화 (ERM)</h3>
 
@@ -1159,7 +1222,7 @@ ISTA  (처음 7개): [ 2.876 -1.893  1.413 -0.912  0.421  0.     0.   ]
 </div></details>
 
 <!-- ═══════════════════════════════════════════════════════════════ -->
-<h2>Chapter 9. 금융 최적화 응용</h2>
+<h2 id="ch9">Chapter 9. 금융 최적화 응용</h2>
 
 <h3>9.1 Risk Parity 포트폴리오</h3>
 
@@ -1365,7 +1428,7 @@ gamma = <span class="nu">5e-7</span>  <span class="cm"># 영구적 충격 계수
 </div></details>
 
 <!-- ═══════════════════════════════════════════════════════════════ -->
-<h2>Chapter 10. 종합 문제</h2>
+<h2 id="ch10">Chapter 10. 종합 문제</h2>
 
 <h3>종합 문제 1: 볼록 최적화 + 포트폴리오</h3>
 
